--- a/milestone-module/milestone03/module13.5-bootstrap-practice/index.html
+++ b/milestone-module/milestone03/module13.5-bootstrap-practice/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
-<body>
+<body style="background-color: #f3f1ff">
     <header>
         <nav class="navbar w-100 navbar-expand-lg navbar-dark" style="background-color: #552dff;">
             <div class="container">
@@ -39,7 +39,37 @@
         </nav>
     </header>
     <main>
+        <section class="container bg-white shadow-lg rounded">
+            <h1 class="text-primary my-5 ">Top Player</h1>
+            <div class="row gy-5 pb-5">
+                <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center ">
+                    <img width="56px" src="./images/players/player-1.png" alt="image">
+                    <h2 class="ms-3">John Smith</h2>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                    <img width="56px" src="./images/players/player-2.png" alt="image">
+                    <h2 class="ms-3">Pro Pasel</h2>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                    <img width="56px" src="./images/players/player-3.png" alt="image">
+                    <h2 class="ms-3">Abu Sufian</h2>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                    <img width="56px" src="./images/players/player-4.png" alt="image">
+                    <h2 class="ms-3">Shajedul Karim</h2>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                    <img width="56px" src="./images/players/player-5.png" alt="image">
+                    <h2 class="ms-3">Maruf Ahmed</h2>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                    <img width="56px" src="./images/players/player-6.png" alt="image">
+                    <h2 class="ms-3">Mujahid</h2>
+                </div>
 
+            </div>
+            <hr class="">
+        </section>
     </main>
     <footer>
 
