--- a/milestone-module/milestone03/module13.5-bootstrap-practice/index.html
+++ b/milestone-module/milestone03/module13.5-bootstrap-practice/index.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
     <main>
-        <section class="container bg-white shadow-lg rounded">
+        <section class="container ps-5 bg-white shadow-lg rounded">
             <h1 class="text-primary my-5 ">Top Player</h1>
             <div class="row gy-5 pb-5">
                 <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center ">
@@ -68,7 +68,65 @@
                 </div>
 
             </div>
-            <hr class="">
+            <hr>
+
+            <div>
+                <h1 class="text-primary my-5 ">Top Blog</h1>
+                <div class="row g-5">
+                    <div class="col-md-12 col-lg-6 d-flex">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <img width="177px" src="./images/blogs/blog-1.png" alt="image">
+                            </div>
+                            <div class="p-2 col-12 col-md-6">
+                                <h4>13 of My Favorite
+                                    UI/UX Goodies</h4>
+                                <p>By <a href="#">Danny Sapio</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-6 d-flex">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <img width="177px" src="./images/blogs/blog-2.png" alt="image">
+                            </div>
+                            <div class="p-2 col-12 col-md-6">
+                                <h4>13 of My Favorite
+                                    UI/UX Goodies</h4>
+                                <p>By <a href="#">Danny Sapio</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-6 d-flex">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <img width="177px" src="./images/blogs/blog-3.png" alt="image">
+                            </div>
+                            <div class="p-2 col-12 col-md-6">
+                                <h4>13 of My Favorite
+                                    UI/UX Goodies</h4>
+                                <p>By <a href="#">Danny Sapio</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-6 d-flex">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <img width="177px" src="./images/blogs/blog-4.png" alt="image">
+                            </div>
+                            <div class="p-2 col-12 col-md-6">
+                                <h4>13 of My Favorite
+                                    UI/UX Goodies</h4>
+                                <p>By <a href="#">Danny Sapio</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+
         </section>
     </main>
     <footer>
