Module13.5: Course Section Added | Fully Done

--- a/milestone-module/milestone03/module13.5-bootstrap-practice/index.html
+++ b/milestone-module/milestone03/module13.5-bootstrap-practice/index.html
@@ -7,8 +7,11 @@
     <title>13.5 Bootstrap Practice</title> 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/c61e520dd5.js" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: #f3f1ff">
+    <!-- Navigation Section -->
     <header>
         <nav class="navbar w-100 navbar-expand-lg navbar-dark" style="background-color: #552dff;">
             <div class="container">
@@ -39,7 +42,8 @@
         </nav>
     </header>
     <main>
-        <section class="container ps-5 bg-white shadow-lg rounded">
+        <!-- Top Section -->
+        <section class="container px-5 bg-white shadow-lg rounded">
             <h1 class="text-primary my-5 ">Top Player</h1>
             <div class="row gy-5 pb-5">
                 <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center ">
@@ -70,7 +74,7 @@
             </div>
             <hr>
 
-            <div>
+            <div class="pb-5">
                 <h1 class="text-primary my-5 ">Top Blog</h1>
                 <div class="row g-5">
                     <div class="col-md-12 col-lg-6 d-flex">
@@ -122,12 +126,68 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
-
-
         </section>
+
+        <!-- Bottom Section -->
+        <section class="container px-5 bg-white shadow-lg rounded">
+            <h1 class="text-primary my-5 ">Lates Course</h1>
+            <div class="row g-5 pe-5 pb-5">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img width="300px" src="./images/courses/course-1.png" alt="course">
+                    <h2>React - The Complete Guide 2022</h2>
+                    <p class="text-danger">Reed krakoff</p>
+                    <span class="text-warning">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                    <span class="text-secondary"><i class="far fa-star"></i></span>
+                    <span class="ms-3 text-secondary">4.5</span>
+                    <span class="ms-3 rounded px-1 bg-warning"  style="--bs-bg-opacity: .5;">
+                        <i class="far fa-clock"></i>
+                        01:30 hr
+                    </span>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img width="300px" src="./images/courses/course-2.png" alt="course">
+                    <h2>Powerpoint 2022 <br> Master Powerpoint Course</h2>
+                    <p class="text-danger">Walter Scott</p>
+                    <span class="text-warning">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                    <span class="text-secondary"><i class="far fa-star"></i></span>
+                    <span class="ms-3 text-secondary">4.6</span>
+                    <span class="ms-3 rounded px-1 bg-warning"  style="--bs-bg-opacity: .5;">
+                        <i class="far fa-clock"></i>
+                        01:20 hr
+                    </span>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img width="300px" src="./images/courses/course-3.png" alt="course">
+                    <h2>The Complete JavaScript Course 2022</h2>
+                    <p class="text-danger">Reed krakoff</p>
+                    <span class="text-warning">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                    <span class="text-secondary"><i class="far fa-star"></i></span>
+                    <span class="ms-3 text-secondary">4.7</span>
+                    <span class="ms-3 rounded px-1 bg-warning"  style="--bs-bg-opacity: .5;">
+                        <i class="far fa-clock"></i>
+                        01:30 hr
+                    </span>
+                </div>
+                
+            </div>
+        </section>
+        <br> <br>
     </main>
     <footer>
 
